Details
-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
5.6.0 Alpha
-
None
-
bd7bdf9752bc07b44bb10231dd9c23d0e9c643d5
Description
Run `testbench -style material`
- the highlighted buttons are not highlighted
Switch to dark theme
- all buttons look highlighted
Light theme: make highlighted button use the accent color
Dark theme: make non-highlighted button gray (adapt gray shades from "Flat Dark/Dark theme"?)
Attachments
For Gerrit Dashboard: QTBUG-49551 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
141681,2 | Visualize Material Button's highlighted state | 5.6 | qt/qtquickcontrols2 | Status: MERGED | +2 | 0 |