Visualize Material Button's highlighted state

Change-Id: I1c638c0b70a0ba8d0f5cfe1d7e41fd514c38c1c9
Task-number: QTBUG-49551
Reviewed-by: J-P Nurmi <jpnurmi@theqtcompany.com>